--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/react-cards/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/assets/index.1b5ac73e.js"></script>
-    <link rel="stylesheet" href="/assets/index.cdd9ae49.css">
+    <script type="module" crossorigin src="/react-cards/assets/index.1b5ac73e.js"></script>
+    <link rel="stylesheet" href="/react-cards/assets/index.cdd9ae49.css">
   </head>
   <body>
     <div id="root"></div>
